# Minotaur

./: -  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  imgui.ini  vcpkg.json
scripts/: line_extraction.ipynb
src/: Camera.cpp  Camera.h  Interaction.cpp  Interaction.h  Page.cpp  Page.h  Renderer.cpp  Renderer.h  main.cpp
src/app/: App.cpp  App.h  Screen.h
src/controllers/: ViewportController.h
src/core/: Bitmap.h  Color.h  Core.h  FloatImage.h  Mat3.h  Pathset.h  Theme.h  Transform2D.h  Vec2.h  entity.h
src/filters/: Filter.h  FilterChain.h  FilterRegistry.cpp  FilterRegistry.h  LayerBase.h  Types.h
src/filters/bitmap/: BitmapToFloatFilter.cpp  BitmapToFloatFilter.h  BlurFilter.cpp  BlurFilter.h  CannyFilter.cpp  CannyFilter.h  ClaheFilter.cpp  ClaheFilter.h  FloatBlurFilter.cpp  FloatBlurFilter.h  FloatToPathFilter.cpp  FloatToPathFilter.h  LevelsFilter.cpp  LevelsFilter.h  LineHatchFilter.cpp  LineHatchFilter.h  SkeletonizeFilter.cpp  SkeletonizeFilter.h  ThresholdFilter.cpp  ThresholdFilter.h  TraceBlobsFilter.cpp  TraceBlobsFilter.h  TraceFilter.cpp  TraceFilter.h  imgui.ini
src/filters/pathset/: CurlNoiseFilter.cpp  CurlNoiseFilter.h  LaplacianSmoothFilter.cpp  LaplacianSmoothFilter.h  OptimizePathsFilter.cpp  OptimizePathsFilter.h  SimplifyFilter.cpp  SimplifyFilter.h  SmoothFilter.cpp  SmoothFilter.h  imgui.ini
src/models/: A3Page.h
src/mvc/: Model.h  PathSetGenerator.cpp  PathSetGenerator.h  PlotController.cpp  PlotController.h  PlotView.cpp  PlotView.h  TriangleController.cpp  TriangleController.h  TriangleView.cpp  TriangleView.h
src/plotters/: AxidrawController.cpp  AxidrawController.h  MotionPlanner.cpp  MotionPlanner.h  PlotSpooler.cpp  PlotSpooler.h  PlotterConfig.h
src/render/: A3PageRenderer.cpp  A3PageRenderer.h  BitmapRenderer.cpp  BitmapRenderer.h  FloatImageRenderer.cpp  FloatImageRenderer.h  ImageRenderer.cpp  ImageRenderer.h  LineRenderer.cpp  LineRenderer.h  imgui.ini
src/screens/: MainScreen.cpp  MainScreen.gui.cpp  MainScreen.h
src/serial/: SerialController.cpp  SerialController.h
src/utils/: BitmapGenerator.cpp  BitmapGenerator.h  ImageLoader.cpp  ImageLoader.h  KdTree2D.h  PathSetGenerator.cpp  PathSetGenerator.h  Serialization.cpp  Serialization.h  VectorFont.cpp  VectorFont.h
tests/: test_kdtree.cpp  test_sanity.cpp
